@@ -1,7 +1,8 @@
 $:.unshift File.dirname(__FILE__) + "/../lib"
 require 'zack'
 
-client = Zack::Client.new('sample', :with_answer => [:get_time])
+client = Zack::Client.new('sample', 
+  :with_answer => [:get_time])
 
 client.announce
 puts client.get_time
